--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "intervention/image": "^3.6",
         "intervention/image-laravel": "^1.2",
         "laravel/framework": "^11.0",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "stripe/stripe-php": "^15.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
